fixed jumping issues and starting character sprites

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 canvas {
-    position: absolute;
-    left: 0;
-    top: 0;
     background-image: url("assets/background/Sky.png");
 }
